added missing files + clean up